# CFDesktop

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Doxyfile  FAILED_DOXYGEN.md  PIPELINE.md  PROJECT_STATUS_REPORT.md  README.md  mkdocs.yml
base/: CMakeLists.txt
base/device/: CMakeLists.txt
base/device/console/: CMakeLists.txt  console_defines.h  console_helper.cpp  console_helper.h
base/device/console/impl/: console_platform.cpp  console_platform.h
base/include/base/: export.h
base/include/base/expected/: expected.hpp
base/include/base/factory/: plain_factory.hpp  registered_factory.hpp  smartptr_plain_factory.hpp
base/include/base/hash/: constexpr_fnv1a.hpp
base/include/base/helpers/: once_init.hpp
base/include/base/linux/: proc_parser.h
base/include/base/lockfree/: mpsc_queue.hpp
base/system/: CMakeLists.txt  os_helper.h
base/system/cpu/: CMakeLists.txt
base/system/gpu/: CMakeLists.txt  gpu.cpp
base/system/memory/: CMakeLists.txt
base/system/network/: CMakeLists.txt  network.cpp
desktop/: CMakeLists.txt  desktop_entry.cpp  desktop_entry.h  desktop_run_session.cpp  export.h  main.cpp
desktop/base/: CMakeLists.txt
desktop/base/ascii_art/: CMakeLists.txt
desktop/base/config_manager/: CMakeLists.txt
desktop/base/file_operations/: CMakeLists.txt  file_op.cpp  file_op.h
desktop/base/logger/: CMakeLists.txt
desktop/main/: CMakeLists.txt  desktop_entry.cpp  desktop_entry.h  main.cpp
desktop/main/early_session/: CMakeLists.txt
desktop/main/init/: CMakeLists.txt  boot_stage_info.h  init.h  init_early_session.cpp  init_session.cpp  init_session_chain.cpp  init_session_chain.h  init_settings.cpp  init_settings.h  init_stage.h  init_stage_name.h
desktop/main/log/: CMakeLists.txt  log_helper.cpp  log_helper.h
desktop/main/path/: CMakeLists.txt  desktop_main_path_resolvers.cpp  desktop_main_path_resolvers.h  desktop_self_path_resolvers.cpp  desktop_self_path_resolvers.h
desktop/ui/: CFDesktop.cpp  CFDesktop.h  CFDesktopEntity.cpp  CFDesktopEntity.h  CFDesktopProxy.cpp  CFDesktopProxy.h  CFDesktopWindowProxy.cpp  CFDesktopWindowProxy.h  CMakeLists.txt
desktop/ui/base/: CMakeLists.txt  meta_adapts.cpp  meta_adapts.h  qt_backend.cpp  qt_backend.h
desktop/ui/components/: CMakeLists.txt  DisplayServerBackendFactory.h  IShellLayer.h  IShellLayerStrategy.h  PanelManager.h
desktop/ui/models/: CMakeLists.txt  README.md
desktop/ui/platform/: CMakeLists.txt  DesktopPropertyStrategyFactory.cpp  DesktopPropertyStrategyFactory.h  IDesktopDisplaySizeStrategy.cpp  IDesktopDisplaySizeStrategy.h  IDesktopPropertyStrategy.cpp  IDesktopPropertyStrategy.h  display_backend_helper.cpp  display_backend_helper.h  platform_helper.cpp  platform_helper.h  shell_layer_helper.cpp  shell_layer_helper.h
desktop/ui/widget/: CMakeLists.txt  README.md
example/gui/: CMakeLists.txt
example/gui/theme/: CMakeLists.txt
test/: CMakeLists.txt
test/base/: CMakeLists.txt
test/base/lockfree/: mpsc_queue_test.cpp
test/base/policy_chain/: policy_chain_test.cpp
test/boot_test/: CMakeLists.txt  README.md  boot_detect.cpp  boot_detect.h  boot_test_core.cpp  boot_test_gui.cpp
test/cmake/: add_gtest_executable.cmake
test/config_manager/: CMakeLists.txt  config_json_backend_test.cpp  config_store_test.cpp  mock_path_provider.h
test/desktop/: CMakeLists.txt
test/desktop/init/: CMakeLists.txt  init_session_chain_test.cpp
test/logger/: CMakeLists.txt
test/logger/error_handling/: logger_error_handling_test.cpp
test/logger/mock/: mock_sink.h
test/scripts/: run_all_tests.ps1  run_all_tests.sh
test/system/: CMakeLists.txt  test_memory_info_query.cpp
test/tools/test_doxygen_linter/: __init__.py  test_analyze_file.py  test_check_enum_struct_docs.py  test_check_file_header.py  test_check_function_blocks.py  test_check_language_rules.py  test_check_line_length.py  test_code_block_detection.py  test_framework.py  test_linter.py  test_member_variables.py  test_private_detection.py  test_should_skip.py
test/ui/: CMakeLists.txt
test/ui/base/: CMakeLists.txt  color_helper_test.cpp  color_test.cpp  device_pixel_test.cpp  easing_test.cpp  geometry_helper_test.cpp  math_helper_test.cpp
test/ui/components/: CMakeLists.txt  elevation_controller_test.cpp  focus_ring_test.cpp  painter_layer_test.cpp  ripple_helper_test.cpp  state_machine_test.cpp
test/ui/core/: CMakeLists.txt
test/ui/widget/: CMakeLists.txt  button_test.cpp  checkbox_test.cpp  combobox_test.cpp  doublespinbox_test.cpp  groupbox_test.cpp  label_test.cpp  listview_test.cpp  progressbar_test.cpp  radiobutton_test.cpp  scrollview_test.cpp  separator_test.cpp  slider_test.cpp  spinbox_test.cpp  switch_test.cpp  tableview_test.cpp  tabview_test.cpp  textarea_test.cpp  textfield_test.cpp  treeview_test.cpp  widget_test_helper.h
ui/: .gitignore  CMakeLists.txt  export.h
ui/base/: CMakeLists.txt  color.cpp  color.h  color_helper.cpp  color_helper.h  device_pixel.cpp  device_pixel.h  easing.cpp  easing.h  geometry_helper.cpp  geometry_helper.h  math_helper.cpp  math_helper.h  qt_format.h
ui/components/: CMakeLists.txt  animation.cpp  animation.h  animation_factory_manager.cpp  animation_factory_manager.h  animation_group.h  spring_animation.h  timing_animation.cpp  timing_animation.h
ui/components/material/: CMakeLists.txt  cfmaterial_animation_factory.cpp  cfmaterial_animation_factory.h  cfmaterial_animation_strategy.cpp  cfmaterial_animation_strategy.h  cfmaterial_fade_animation.cpp  cfmaterial_fade_animation.h  cfmaterial_property_animation.cpp  cfmaterial_property_animation.h  cfmaterial_scale_animation.cpp  cfmaterial_scale_animation.h  cfmaterial_slide_animation.cpp  cfmaterial_slide_animation.h
ui/core/: CMakeLists.txt  color_scheme.h  font_type.h  radius_scale.h  theme_manager.cpp  theme_manager.h  token.hpp
ui/core/material/: CMakeLists.txt  cfmaterial_fonttype.h  cfmaterial_motion.h  cfmaterial_radius_scale.h  cfmaterial_scheme.h
ui/models/: CMakeLists.txt
ui/widget/: CMakeLists.txt
ui/widget/application_support/: application.cpp  application.h
(+590 files in other folders)
